SCANMAVEN-308 Fix toolchains support in Maven 4